--- a/backends-common/pom.xml
+++ b/backends-common/pom.xml
@@ -36,6 +36,7 @@
     <modules>
         <module>cassandra</module>
         <module>elasticsearch-v7</module>
+        <module>elasticsearch-v8</module>
         <module>jpa</module>
         <module>pulsar</module>
         <module>rabbitmq</module>
