fixup! JAMES-3756 Binding DelegationStoreAuthorizator to Cassandra products
- Module chooser for Authorizator: DelegationStoreAuthorizator for CassandraUsersRepositoryModule and old UserRepositoryAuthorizator for LdapUsersRepositoryModule
DelegationStoreAuthorizator uses directly CassandraUsersDao which LdapUsersRepositoryModule is not using (ReadOnlyLDAPUsersDAO)

--- a/server/container/guice/data-cassandra/pom.xml
+++ b/server/container/guice/data-cassandra/pom.xml
@@ -56,6 +56,10 @@
             <artifactId>james-server-guice-configuration</artifactId>
         </dependency>
         <dependency>
+            <groupId>${james.groupId}</groupId>
+            <artifactId>james-server-mailbox-adapter</artifactId>
+        </dependency>
+        <dependency>
             <!-- Added because of https://issues.apache.org/jira/browse/SUREFIRE-1266 -->
             <groupId>${james.groupId}</groupId>
             <artifactId>james-server-testing</artifactId>
@@ -66,6 +70,5 @@
             <artifactId>guice</artifactId>
         </dependency>
     </dependencies>
-
 
 </project>
