[SITE] Improve metrics documentation
 - Document Prometheus on legacy website
 - Clarify limitations of the existing ElasticSearch reporter

Only supports ES up to version 6, distinct from James ELasticSearch
versions.

--- a/server/apps/cassandra-app/sample-configuration/elasticsearch.properties
+++ b/server/apps/cassandra-app/sample-configuration/elasticsearch.properties
@@ -77,11 +77,13 @@ elasticsearch.indexAttachments=true
 
 # Reports for metrics into ElasticSearch
 # Defaults to elasticsearch.masterHost : on which server to publish metrics
-elasticsearch.http.host=elasticsearch
-elasticsearch.http.port=9200
-elasticsearch.metrics.reports.enabled=true
-elasticsearch.metrics.reports.period=30
-elasticsearch.metrics.reports.index=james-metrics
+# WARNING: Supported ElasticSearch versions for metrics differs from the James one. Only ElasticSearch version 2 to 6 are supported. This requires a distinct ElasticSearch isntalation for metrics.
+# This component is furthermore unmaintained an use is discouraged.#elasticsearch.http.host=elasticsearch
+# elasticsearch.http.host=elasticsearch
+# elasticsearch.http.port=9200
+# elasticsearch.metrics.reports.enabled=true
+# elasticsearch.metrics.reports.period=30
+# elasticsearch.metrics.reports.index=james-metrics
 
 # Search overrides allow resolution of predefined search queries against alternative sources of data
 # and allow bypassing ElasticSearch. This is useful to handle most resynchronisation queries that
