--- a/server/apps/memory-app/sample-configuration/elasticsearch.properties
+++ b/server/apps/memory-app/sample-configuration/elasticsearch.properties
@@ -24,8 +24,10 @@
 
 # Reports for metrics into ElasticSearch
 # Defaults to elasticsearch.masterHost : on which server to publish metrics
-elasticsearch.http.host=elasticsearch
-elasticsearch.http.port=9200
-elasticsearch.metrics.reports.enabled=true
-elasticsearch.metrics.reports.period=30
-elasticsearch.metrics.reports.index=james-metrics
+# WARNING: Supported ElasticSearch versions for metrics differs from the James one. Only ElasticSearch version 2 to 6 are supported. This requires a distinct ElasticSearch isntalation for metrics.
+# This component is furthermore unmaintained an use is discouraged.#elasticsearch.http.host=elasticsearch
+# elasticsearch.http.host=elasticsearch
+# elasticsearch.http.port=9200
+# elasticsearch.metrics.reports.enabled=true
+# elasticsearch.metrics.reports.period=30
+# elasticsearch.metrics.reports.index=james-metrics
