JAMES-3771 Copy mailbox es8 module to a new opensearch one

--- a/mailbox/pom.xml
+++ b/mailbox/pom.xml
@@ -46,6 +46,8 @@
         <module>lucene</module>
         <module>memory</module>
 
+        <module>opensearch</module>
+
         <module>plugin/deleted-messages-vault</module>
         <module>plugin/deleted-messages-vault-cassandra</module>
 
