JAMES-3774 JVM properties: io.netty.leakDetection.level

--- a/server/apps/cassandra-app/sample-configuration/jvm.properties
+++ b/server/apps/cassandra-app/sample-configuration/jvm.properties
@@ -34,5 +34,8 @@ config.file=conf/cassandra-driver.conf
 # Optional. Boolean. Defaults to true.
 #james.protocols.mdc.hostname=true
 
+# Manage netty leak detection level see https://netty.io/wiki/reference-counted-objects.html#leak-detection-levels
+# io.netty.leakDetection.level=SIMPLE
+
 # Should James exit on Startup error? Boolean, defaults to true. This prevents partial startup.
 # james.exit.on.startup.error=true
