--- a/server/apps/memory-app/sample-configuration/jvm.properties
+++ b/server/apps/memory-app/sample-configuration/jvm.properties
@@ -31,5 +31,8 @@
 # Optional. Boolean. Defaults to true.
 #james.protocols.mdc.hostname=true
 
+# Manage netty leak detection level see https://netty.io/wiki/reference-counted-objects.html#leak-detection-levels
+# io.netty.leakDetection.level=SIMPLE
+
 # Should James exit on Startup error? Boolean, defaults to true.
 # james.exit.on.startup.error=true
