JAMES-2146 James should exit when startup sequence fails
A JVM property allows disabling this behaviour.

--- a/server/apps/memory-app/sample-configuration/jvm.properties
+++ b/server/apps/memory-app/sample-configuration/jvm.properties
@@ -30,3 +30,6 @@
 # is attempted for each incoming connection, which can be costly. Remote IP is always added to the logging context.
 # Optional. Boolean. Defaults to true.
 #james.protocols.mdc.hostname=true
+
+# Should James exit on Startup error? Boolean, defaults to true.
+# james.exit.on.startup.error=true
