JAMES-3781 As a user I want to enforce explicit configuration
Adds james.fail.on.missing.configuration=true JVM option.

--- a/server/apps/cassandra-app/sample-configuration/jvm.properties
+++ b/server/apps/cassandra-app/sample-configuration/jvm.properties
@@ -39,3 +39,6 @@ config.file=conf/cassandra-driver.conf
 
 # Should James exit on Startup error? Boolean, defaults to true. This prevents partial startup.
 # james.exit.on.startup.error=true
+
+# Fails explicitly on missing configuration file rather that taking implicit values. Defautls to false.
+# james.fail.on.missing.configuration=true
