--- a/server/apps/memory-app/sample-configuration/jvm.properties
+++ b/server/apps/memory-app/sample-configuration/jvm.properties
@@ -36,3 +36,6 @@
 
 # Should James exit on Startup error? Boolean, defaults to true.
 # james.exit.on.startup.error=true
+
+# Fails explicitly on missing configuration file rather that taking implicit values. Defautls to false.
+# james.fail.on.missing.configuration=true
