--- a/server/apps/distributed-app/sample-configuration/jvm.properties
+++ b/server/apps/distributed-app/sample-configuration/jvm.properties
@@ -39,3 +39,6 @@ config.file=conf/cassandra-driver.conf
 
 # Should James exit on Startup error? Boolean, defaults to true. This prevents partial startup.
 # james.exit.on.startup.error=true
+
+# Fails explicitly on missing configuration file rather that taking implicit values. Defautls to false.
+# james.fail.on.missing.configuration=true
