JAMES-3781 As a user I want to enforce explicit configuration
Adds james.fail.on.missing.configuration=true JVM option.

--- a/server/apps/cassandra-app/sample-configuration/jvm.properties
+++ b/server/apps/cassandra-app/sample-configuration/jvm.properties
@@ -30,3 +30,6 @@
 # is attempted for each incoming connection, which can be costly. Remote IP is always added to the logging context.
 # Optional. Boolean. Defaults to true.
 #james.protocols.mdc.hostname=true
+
+# Fails explicitly on missing configuration file rather that taking implicit values. Defautls to false.
+# james.fail.on.missing.configuration=true
