--- a/server/apps/memory-app/sample-configuration/jvm.properties
+++ b/server/apps/memory-app/sample-configuration/jvm.properties
@@ -30,3 +30,6 @@
 # is attempted for each incoming connection, which can be costly. Remote IP is always added to the logging context.
 # Optional. Boolean. Defaults to true.
 #james.protocols.mdc.hostname=true
+
+# Fails explicitly on missing configuration file rather that taking implicit values. Defautls to false.
+# james.fail.on.missing.configuration=true
