--- a/server/apps/distributed-pop3-app/sample-configuration/jvm.properties
+++ b/server/apps/distributed-pop3-app/sample-configuration/jvm.properties
@@ -42,3 +42,7 @@ config.file=conf/cassandra-driver.conf
 
 # Fails explicitly on missing configuration file rather that taking implicit values. Defautls to false.
 # james.fail.on.missing.configuration=true
+
+# JMX, when enable causes RMI to plan System.gc every hour. Set this instead to once every 1000h.
+sun.rmi.dgc.server.gcInterval=3600000000
+sun.rmi.dgc.client.gcInterval=3600000000
