--- a/pom.xml
+++ b/pom.xml
@@ -3262,7 +3262,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.2</version>
+                    <version>3.0.0-M7</version>
                     <configuration>
                         <systemPropertyVariables>
                             <!--https://issues.apache.org/jira/browse/JAMES-3724-->
@@ -3270,7 +3270,8 @@
                             <james.exit.on.startup.error>false</james.exit.on.startup.error>
                         </systemPropertyVariables>
                         <argLine>-Xms512m -Xmx1024m</argLine>
-                        <reuseForks>true</reuseForks>
+                        <reuseForks>false</reuseForks>
+                        <forkCount>1</forkCount>
                         <!-- Fail tests longer than 20 minutes, prevent form random locking tests -->
                         <forkedProcessTimeoutInSeconds>1200</forkedProcessTimeoutInSeconds>
                         <excludedGroups>unstable</excludedGroups>
@@ -3703,10 +3704,11 @@
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-plugin</artifactId>
-                            <version>2.22.2</version>
+                            <version>3.0.0-M7</version>
                             <configuration>
                                 <excludedGroups />
                                 <groups>unstable</groups>
+                                <reuseForks>false</reuseForks>
                             </configuration>
                         </plugin>
                     </plugins>
