--- a/server/protocols/protocols-smtp/pom.xml
+++ b/server/protocols/protocols-smtp/pom.xml
@@ -235,7 +235,7 @@
                         <io.netty.leakDetection.level>PARANOID</io.netty.leakDetection.level>
                     </systemPropertyVariables>
                     <argLine>-Xms512m -Xmx1024m</argLine>
-                    <reuseForks>true</reuseForks>
+                    <reuseForks>false</reuseForks>
                     <!-- Fail tests longer than 20 minutes, prevent form random locking tests -->
                     <forkedProcessTimeoutInSeconds>1200</forkedProcessTimeoutInSeconds>
                     <excludedGroups>unstable</excludedGroups>
