--- a/pom.xml
+++ b/pom.xml
@@ -3275,6 +3275,18 @@
                         <!-- Fail tests longer than 20 minutes, prevent form random locking tests -->
                         <forkedProcessTimeoutInSeconds>1200</forkedProcessTimeoutInSeconds>
                         <excludedGroups>unstable</excludedGroups>
+                        <excludes>
+                            <exclude>org.apache.james.queue.pulsar.PulsarMailQueueTest</exclude>
+                            <exclude>org.apache.james.queue.pulsar.PulsarMailQueueFactoryTest</exclude>
+                            <exclude>org.apache.james.jmap.cassandra.pushsubscription.CassandraPushSubscriptionRepositoryTest</exclude>
+                            <exclude>org.apache.james.backends.cassandra.init.CassandraTableManagerTest</exclude>
+                            <exclude>org.apache.james.backends.cassandra.init.ResilientClusterProviderTest</exclude>
+                            <exclude>org.apache.james.backends.es.v7.ClientProviderImplConnectionAuthESOverrideTrustStoreTest</exclude>
+                            <exclude>org.apache.james.user.ldap.*</exclude>
+                            <exclude>org.apache.james.smtpserver.SMTPSaslTest</exclude>
+                            <exclude>org.apache.james.blob.objectstorage.aws.*</exclude>
+                            <exclude>org.apache.james.backends.cassandra.utils.CassandraHealthCheckTest</exclude>
+                        </excludes>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -3709,6 +3721,19 @@
                                 <excludedGroups />
                                 <groups>unstable</groups>
                                 <reuseForks>false</reuseForks>
+                                <includes>
+                                    <include>org.apache.james.queue.pulsar.PulsarMailQueueTest</include>
+                                    <include>org.apache.james.queue.pulsar.PulsarMailQueueFactoryTest</include>
+                                    <include>org.apache.james.jmap.cassandra.pushsubscription.CassandraPushSubscriptionRepositoryTest</include>
+                                    <include>org.apache.james.backends.cassandra.init.CassandraTableManagerTest</include>
+                                    <include>org.apache.james.backends.cassandra.init.ResilientClusterProviderTest</include>
+                                    <include>org.apache.james.backends.es.v7.ClientProviderImplConnectionAuthESOverrideTrustStoreTest</include>
+                                    <include>org.apache.james.user.ldap.*</include>
+                                    <include>org.apache.james.smtpserver.SMTPSaslTest</include>
+                                    <include>org.apache.james.blob.objectstorage.aws.*</include>
+                                    <include>org.apache.james.backends.cassandra.utils.CassandraHealthCheckTest</include>
+                                </includes>
+                                <threadCount>1</threadCount>
                             </configuration>
                         </plugin>
                     </plugins>
