--- a/server/data/data-ldap/pom.xml
+++ b/server/data/data-ldap/pom.xml
@@ -108,6 +108,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <threadCount>1</threadCount>
+                    <forkCount>1</forkCount>
                 </configuration>
             </plugin>
         </plugins>
