JAMES-3791 Remote Delivery uses a pool of SMTP sessions.
This prevents a race condition in setting per-delivery properties.

(cherry picked from commit ad05e797507bbab2bbb3709b402c3627262874c3)

--- a/server/mailet/mailets/pom.xml
+++ b/server/mailet/mailets/pom.xml
@@ -216,6 +216,10 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.james</groupId>
             <artifactId>apache-mime4j-dom</artifactId>
         </dependency>
