JAMES-3771 Configuration: use opensearch wording

--- a/server/apps/distributed-app/sample-configuration/opensearch.properties
+++ b/server/apps/distributed-app/sample-configuration/opensearch.properties
@@ -18,75 +18,64 @@
 #  This template file can be used as example for James Server configuration
 #  DO NOT USE IT AS SUCH AND ADAPT IT TO YOUR NEEDS
 
-# Configuration file for ElasticSearch
+# Configuration file for OpenSearch
+# Read https://james.apache.org/server/config-opensearch.html for further details
 
-# Read https://james.apache.org/server/config-elasticsearch.html for further details
-
-elasticsearch.masterHost=elasticsearch
-elasticsearch.port=9200
+opensearch.masterHost=opensearch
+opensearch.port=9200
 
 # Optional. Only http or https are accepted, default is http
-# elasticsearch.hostScheme=http
+# opensearch.hostScheme=http
 
 # Optional, default is `default`
 # Choosing the SSL check strategy when using https scheme
 # default: Use the default SSL TrustStore of the system.
 # ignore: Ignore SSL Validation check (not recommended).
 # override: Override the SSL Context to use a custom TrustStore containing ES server's certificate.
-# elasticsearch.hostScheme.https.sslValidationStrategy=default
+# opensearch.hostScheme.https.sslValidationStrategy=default
 
 # Optional. Required when using 'https' scheme and 'override' sslValidationStrategy
-# Configure Elasticsearch rest client to use this trustStore file to recognize nginx's ssl certificate.
+# Configure OpenSearch rest client to use this trustStore file to recognize nginx's ssl certificate.
 # You need to specify both trustStorePath and trustStorePassword
-# elasticsearch.hostScheme.https.trustStorePath=/file/to/trust/keystore.jks
+# opensearch.hostScheme.https.trustStorePath=/file/to/trust/keystore.jks
 
 # Optional. Required when using 'https' scheme and 'override' sslValidationStrategy
-# Configure Elasticsearch rest client to use this trustStore file with the specified password.
+# Configure OpenSearch rest client to use this trustStore file with the specified password.
 # You need to specify both trustStorePath and trustStorePassword
-# elasticsearch.hostScheme.https.trustStorePassword=myJKSPassword
+# opensearch.hostScheme.https.trustStorePassword=myJKSPassword
 
 # Optional. default is `default`
-# Configure Elasticsearch rest client to use host name verifier during SSL handshake
+# Configure OpenSearch rest client to use host name verifier during SSL handshake
 # default: using the default hostname verifier provided by apache http client.
-# accept_any_hostname: accept any hostname (not recommended).
-# elasticsearch.hostScheme.https.hostNameVerifier=default
+# accept_any_hostname: accept any host (not recommended).
+# opensearch.hostScheme.https.hostNameVerifier=default
 
 # Optional.
-# Basic auth username to access elasticsearch.
-# Ignore elasticsearch.user and elasticsearch.password to not be using authentication (default behaviour).
+# Basic auth username to access opensearch.
+# Ignore opensearch.user and opensearch.password to not be using authentication (default behaviour).
 # Otherwise, you need to specify both properties.
-# elasticsearch.user=elasticsearch
+# opensearch.user=elasticsearch
 
 # Optional.
-# Basic auth password to access elasticsearch.
-# Ignore elasticsearch.user and elasticsearch.password to not be using authentication (default behaviour).
+# Basic auth password to access opensearch.
+# Ignore opensearch.user and opensearch.password to not be using authentication (default behaviour).
 # Otherwise, you need to specify both properties.
-# elasticsearch.password=secret
+# opensearch.password=secret
 
 # You can alternatively provide a list of hosts following this format :
-# elasticsearch.hosts=host1:9200,host2:9200
-# elasticsearch.clusterName=cluster
+# opensearch.hosts=host1:9200,host2:9200
+# opensearch.clusterName=cluster
 
-elasticsearch.nb.shards=5
-elasticsearch.nb.replica=1
-elasticsearch.index.waitForActiveShards=1
-elasticsearch.retryConnection.maxRetries=7
-elasticsearch.retryConnection.minDelay=3000
+opensearch.nb.shards=5
+opensearch.nb.replica=1
+opensearch.index.waitForActiveShards=1
+opensearch.retryConnection.maxRetries=7
+opensearch.retryConnection.minDelay=3000
 # Index or not attachments (default value: true)
-elasticsearch.indexAttachments=true
-
-# Reports for metrics into ElasticSearch
-# Defaults to elasticsearch.masterHost : on which server to publish metrics
-# WARNING: Supported ElasticSearch versions for metrics differs from the James one. Only ElasticSearch version 2 to 6 are supported. This requires a distinct ElasticSearch isntalation for metrics.
-# This component is furthermore unmaintained an use is discouraged.#elasticsearch.http.host=elasticsearch
-# elasticsearch.http.host=elasticsearch
-# elasticsearch.http.port=9200
-# elasticsearch.metrics.reports.enabled=true
-# elasticsearch.metrics.reports.period=30
-# elasticsearch.metrics.reports.index=james-metrics
+opensearch.indexAttachments=true
 
 # Search overrides allow resolution of predefined search queries against alternative sources of data
-# and allow bypassing ElasticSearch. This is useful to handle most resynchronisation queries that
+# and allow bypassing opensearch. This is useful to handle most resynchronisation queries that
 # are simple enough to be resolved against Cassandra.
 #
 # Possible values are:
@@ -104,4 +93,4 @@ elasticsearch.indexAttachments=true
 #
 # Please note that custom overrides can be defined here.
 #
-# elasticsearch.search.overrides=org.apache.james.mailbox.cassandra.search.AllSearchOverride,org.apache.james.mailbox.cassandra.search.DeletedSearchOverride, org.apache.james.mailbox.cassandra.search.DeletedWithRangeSearchOverride,org.apache.james.mailbox.cassandra.search.NotDeletedWithRangeSearchOverride,org.apache.james.mailbox.cassandra.search.UidSearchOverride,org.apache.james.mailbox.cassandra.search.UnseenSearchOverride
+# opensearch.search.overrides=org.apache.james.mailbox.cassandra.search.AllSearchOverride,org.apache.james.mailbox.cassandra.search.DeletedSearchOverride, org.apache.james.mailbox.cassandra.search.DeletedWithRangeSearchOverride,org.apache.james.mailbox.cassandra.search.NotDeletedWithRangeSearchOverride,org.apache.james.mailbox.cassandra.search.UidSearchOverride,org.apache.james.mailbox.cassandra.search.UnseenSearchOverride
