--- a/server/apps/distributed-app/sample-configuration/rabbitmq.properties
+++ b/server/apps/distributed-app/sample-configuration/rabbitmq.properties
@@ -71,7 +71,7 @@ mailqueue.view.updateBrowseStartPace=1000
 
 # Enables or disables the gauge metric on the mail queue size
 # Computing the size of the mail queue is currently implemented on top of browse operation and thus have a linear complexity
-# Metrics get exported periodically as configured in elasticsearch.properties, thus getSize is also called periodically
+# Metrics get exported periodically as configured in opensearch.properties, thus getSize is also called periodically
 # Choose to disable it when the mail queue size is getting too big
 # Note that this is as well a temporary workaround until we get 'getSize' method better optimized
 # Optional, default false
