JAMES-3771 Examples: Elastic => OpenSearch rewords

--- a/examples/oidc/james/jmap.properties
+++ b/examples/oidc/james/jmap.properties
@@ -19,7 +19,7 @@ tls.secret=james72laBalle
 #
 #jwt.publickeypem.url=file://conf/jwt_publickey
 
-# Should simple Email/query be resolved against a Cassandra projection, or should we resolve them against ElasticSearch?
+# Should simple Email/query be resolved against a Cassandra projection, or should we resolve them against OpenSearch?
 # This enables a higher resilience, but the projection needs to be correctly populated. False by default.
 # view.email.query.enabled=true
 
