--- a/protocols/netty/pom.xml
+++ b/protocols/netty/pom.xml
@@ -52,6 +52,11 @@
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
+            <artifactId>netty-codec-haproxy</artifactId>
+            <version>4.1.72.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
             <artifactId>netty-handler</artifactId>
             <version>4.1.72.Final</version>
         </dependency>
