--- a/protocols/netty/pom.xml
+++ b/protocols/netty/pom.xml
@@ -53,12 +53,12 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-codec-haproxy</artifactId>
-            <version>4.1.72.Final</version>
+            <version>${netty.version}</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-handler</artifactId>
-            <version>4.1.72.Final</version>
+            <version>${netty.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
