--- a/pom.xml
+++ b/pom.xml
@@ -652,6 +652,7 @@
         <scala.version>${scala.base}.8</scala.version>
         <scalatestplus-play.version>5.0.0</scalatestplus-play.version>
         <doclint>none</doclint>
+        <mockito.version>4.6.0</mockito.version>
     </properties>
 
     <dependencyManagement>
@@ -2730,12 +2731,12 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>4.6.0</version>
+                <version>${mockito.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-inline</artifactId>
-                <version>4.7.0</version>
+                <version>${mockito.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.scala-lang</groupId>
