--- a/pom.xml
+++ b/pom.xml
@@ -616,7 +616,7 @@
         <pax-logging-api.version>1.6.4</pax-logging-api.version>
         <jackson.version>2.13.3</jackson.version>
         <jackson.databind.version>2.13.3</jackson.databind.version>
-        <feign.version>11.8</feign.version>
+        <feign.version>11.9.1</feign.version>
         <feign-form.version>3.8.0</feign-form.version>
         <jjwt.version>0.11.5</jjwt.version>
         <metrics.version>4.2.9</metrics.version>
@@ -652,6 +652,7 @@
         <scala.version>${scala.base}.8</scala.version>
         <scalatestplus-play.version>5.0.0</scalatestplus-play.version>
         <doclint>none</doclint>
+        <mockito.version>4.6.0</mockito.version>
     </properties>
 
     <dependencyManagement>
@@ -1945,6 +1946,11 @@
             </dependency>
             <dependency>
                 <groupId>${james.groupId}</groupId>
+                <artifactId>james-webadmin-http-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
                 <artifactId>javax-mail-extension</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -2725,7 +2731,12 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>4.6.0</version>
+                <version>${mockito.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-inline</artifactId>
+                <version>${mockito.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.scala-lang</groupId>
