JAMES-3788 Add an example for IMAP
 - Rely on memory app (faster startup, imap support)
 - Reference the example in example list
 - Add an IMAP example

--- a/examples/proxy-smtp/docker-compose.yml
+++ b/examples/proxy-smtp/docker-compose.yml
@@ -5,15 +5,20 @@ services:
     image: haproxytech/haproxy-alpine:2.4
     volumes:
       - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+    ports:
+      - 25:25
+      - 143:143
     depends_on:
       - james
 
   james:
-    image: apache/james:jpa-smtp-latest
+    image: apache/james:memory-latest
     container_name: james
     hostname: james.local
     volumes:
       - ./smtpserver.xml:/root/conf/smtpserver.xml:ro
+      - ./imapserver.xml:/root/conf/imapserver.xml:ro
+      - ./keystore:/root/conf/keystore
 
   helo:
     image: alpine:latest
