--- a/examples/proxy-smtp/haproxy.cfg
+++ b/examples/proxy-smtp/haproxy.cfg
@@ -15,3 +15,10 @@ frontend smtp-frontend
 
 backend james-servers
   server james1 james:2525 send-proxy
+
+frontend imap-frontend
+  bind :143
+  default_backend james-servers-imap
+
+backend james-servers-imap
+  server james1 james:143 send-proxy
