JAMES-3793 Add a setting to prevent S3BlobStoreDAO load too big objects in memory
See https://github.com/aws/aws-sdk-java-v2/issues/3381

--- a/server/apps/distributed-pop3-app/sample-configuration/blob.properties
+++ b/server/apps/distributed-pop3-app/sample-configuration/blob.properties
@@ -80,6 +80,11 @@ objectstorage.s3.secretKey=secretKey1
 #objectstorage.s3.truststore.secret=
 #objectstorage.s3.truststore.algorithm=SunX509
 
+# optional: Object read in memory will be rejected if they exceed the size limit exposed here. Size, exemple `100M`.
+# Supported units: K, M, G, defaults to B if no unit is specified. If unspecified, big object won't be prevented
+# from being loaded in memory. This settings complements protocol limits.
+# objectstorage.s3.in.read.limit=50M
+
 # ============================================ Blobs Exporting ==============================================
 # Read https://james.apache.org/server/config-blob-export.html for further details
 
