--- a/server/mailet/remote-delivery-integration-testing/pom.xml
+++ b/server/mailet/remote-delivery-integration-testing/pom.xml
@@ -46,7 +46,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <reuseForks>false</reuseForks>
+                    <reuseForks>true</reuseForks>
                 </configuration>
             </plugin>
         </plugins>
