--- a/pom.xml
+++ b/pom.xml
@@ -3243,7 +3243,7 @@
                     <configuration>
                         <systemPropertyVariables>
                             <!--https://issues.apache.org/jira/browse/JAMES-3724-->
-                            <james.ligecycle.leak.detection.mode>testing</james.ligecycle.leak.detection.mode>
+                            <james.lifecycle.leak.detection.mode>NONE</james.lifecycle.leak.detection.mode>
                             <james.exit.on.startup.error>false</james.exit.on.startup.error>
                         </systemPropertyVariables>
                         <argLine>-Xms512m -Xmx1024m</argLine>
