JAMES-3826 Example and documentation

--- a/examples/custom-healthcheck/src/main/resources/healthcheck.properties
+++ b/examples/custom-healthcheck/src/main/resources/healthcheck.properties
@@ -30,5 +30,4 @@
 
 # List of fully qualified HealthCheck class names in addition to James' default healthchecks.
 # Healthchecks need to be located within the classpath or in the ./extensions-jars folder.
-# additional.healthchecks=
-
+additional.healthchecks=org.apache.james.examples.HealthCheckA
