--- a/server/apps/jpa-app/sample-configuration/healthcheck.properties
+++ b/server/apps/jpa-app/sample-configuration/healthcheck.properties
@@ -28,3 +28,6 @@
 # Duration must be greater or at least equals to 10 seconds.
 # healthcheck.period=60s
 
+# List of fully qualified HealthCheck class names in addition to James' default healthchecks.
+# Healthchecks need to be located within the classpath or in the ./extensions-jars folder.
+# additional.healthchecks=
