Draft - for optimize import maven dependencies

--- a/mailet/api/pom.xml
+++ b/mailet/api/pom.xml
@@ -75,6 +75,17 @@
             <groupId>de.ruedigermoeller</groupId>
             <artifactId>fst</artifactId>
             <version>2.57</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.objenesis</groupId>
+                    <artifactId>objenesis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.objenesis</groupId>
+            <artifactId>objenesis</artifactId>
+            <version>3.2</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
