--- a/mailbox/event/json/pom.xml
+++ b/mailbox/event/json/pom.xml
@@ -62,6 +62,10 @@
             <version>1.7.0</version>
         </dependency>
         <dependency>
+            <groupId>com.chuusai</groupId>
+            <artifactId>shapeless_2.13</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.typesafe.play</groupId>
             <artifactId>play-json_${scala.base}</artifactId>
         </dependency>
@@ -73,7 +77,12 @@
         <dependency>
             <groupId>org.julienrf</groupId>
             <artifactId>play-json-derived-codecs_${scala.base}</artifactId>
-            <version>10.0.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.chuusai</groupId>
+                    <artifactId>shapeless_2.13</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
