--- a/server/queue/queue-pulsar/pom.xml
+++ b/server/queue/queue-pulsar/pom.xml
@@ -95,6 +95,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.chuusai</groupId>
+            <artifactId>shapeless_2.13</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.clever-cloud.pulsar4s</groupId>
             <artifactId>pulsar4s-play-json_${scala.base}</artifactId>
             <version>2.8.1</version>
@@ -106,7 +110,6 @@
         <dependency>
             <groupId>eu.timepit</groupId>
             <artifactId>refined_${scala.base}</artifactId>
-            <version>0.9.13</version>
         </dependency>
         <dependency>
             <groupId>javax.annotation</groupId>
@@ -119,7 +122,12 @@
         <dependency>
             <groupId>org.julienrf</groupId>
             <artifactId>play-json-derived-codecs_${scala.base}</artifactId>
-            <version>7.0.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.chuusai</groupId>
+                    <artifactId>shapeless_2.13</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
