[JAMES-3836] implements guice bindings for BlobMailRepository
Note that `BlobMailRepository` cannot be loaded through the `GuiceMailRepositoryLoader` since it doesn't take a MailRepositoryUrl as a constructor argument.
This is why the BlobMailRepositoryModule provides the proper factory binding for use with the `MultiBoundGuiceMailRepositoryLoader`. The use of this binding is demonstrated in `scaling-pulsar-smtp`.

--- a/server/container/guice/pom.xml
+++ b/server/container/guice/pom.xml
@@ -50,6 +50,7 @@
         <module>mailbox-jpa</module>
         <module>mailbox-plugin-deleted-messages-vault</module>
         <module>mailet</module>
+        <module>mailrepository-blob</module>
         <module>mailrepository-cassandra</module>
         <module>mailrepository-loaders</module>
         <module>memory</module>
@@ -249,6 +250,11 @@
                 <artifactId>james-server-jpa-common-guice</artifactId>
                 <version>${project.version}</version>
                 <type>test-jar</type>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
+                <artifactId>mailrepository-blob</artifactId>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${james.groupId}</groupId>
