--- a/pom.xml
+++ b/pom.xml
@@ -1653,6 +1653,11 @@
             </dependency>
             <dependency>
                 <groupId>${james.groupId}</groupId>
+                <artifactId>james-server-mailrepository-blob</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${james.groupId}</groupId>
                 <artifactId>james-server-mailrepository-cassandra</artifactId>
                 <version>${project.version}</version>
             </dependency>
