JAMES-3834 Configurable value for AES blobStore private key algorithm
New default value of PBKDF2WithHmacSHA512.

This is a breacking change but user with already encrypted data can
switch to PBKDF2WithHmacSHA1.

--- a/server/apps/distributed-app/sample-configuration/blob.properties
+++ b/server/apps/distributed-app/sample-configuration/blob.properties
@@ -37,6 +37,8 @@ encryption.aes.enable=false
 # Mandatory (if AES encryption is enabled) salt and password. Salt needs to be an hexadecimal encoded string
 #encryption.aes.password=xxx
 #encryption.aes.salt=73616c7479
+# Optional, defaults to PBKDF2WithHmacSHA512
+#encryption.aes.private.key.algorithm=PBKDF2WithHmacSHA512
 
 # ========================================= Cassandra BlobStore Cache ======================================
 # A cassandra cache can be enabled to reduce latency when reading small blobs frequently
